--- a/src/utils/prismjs-theme.css
+++ b/src/utils/prismjs-theme.css
@@ -7,98 +7,104 @@ Prism template by Bram de Haan (http://atelierbram.github.io/syntax-highlighting
 Original Base16 color scheme by Chris Kempson (https://github.com/chriskempson/base16)
 
 */
-code[class*="language-"],
-pre[class*="language-"] {
-  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
-  font-size: 14px;
-  line-height: 1.375;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
-  background: #f5f7ff;
-  color: #5e6687;
+code[class*='language-'],
+pre[class*='language-'] {
+	font-family: Consolas, Menlo, Monaco, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter',
+		'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier,
+		monospace;
+	font-size: 14px;
+	line-height: 1.375;
+	direction: ltr;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
+	background: #2d2a55;
+	color: #9efeff;
 }
 
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-  text-shadow: none;
-  background: #dfe2f1;
+pre[class*='language-']::-moz-selection,
+pre[class*='language-'] ::-moz-selection,
+code[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection {
+	text-shadow: none;
+	background: #734ab3;
 }
 
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
-  text-shadow: none;
-  background: #dfe2f1;
+pre[class*='language-']::selection,
+pre[class*='language-'] ::selection,
+code[class*='language-']::selection,
+code[class*='language-'] ::selection {
+	text-shadow: none;
+	background: #734ab3;
 }
 
 /* Code blocks */
-pre[class*="language-"] {
-  padding: 1em;
-  margin: .5em 0;
-  overflow: auto;
+pre[class*='language-'] {
+	padding: 1em;
+	margin: 0.5em 0;
+	overflow: auto;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
-  padding: .1em;
-  border-radius: .3em;
+:not(pre) > code[class*='language-'] {
+	padding: 0.1em;
+	border-radius: 0.3em;
 }
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #898ea4;
+	color: rgb(179, 98, 255);
 }
 
 .token.punctuation {
-  color: #5e6687;
+	color: rgb(255, 255, 255);
 }
 
 .token.namespace {
-  opacity: .7;
+	opacity: 0.7;
 }
 
 .token.operator,
 .token.boolean,
 .token.number {
-  color: #c76b29;
+	color: rgb(255, 98, 140);
 }
 
 .token.property {
-  color: #c08b30;
+	color: rgb(255, 180, 84);
 }
 
 .token.tag {
-  color: #3d8fd1;
+	color: rgb(255, 180, 84);
 }
 
 .token.string {
-  color: #22a2c9;
+	color: rgb(165, 255, 144);
 }
 
 .token.selector {
-  color: #6679cc;
+	color: rgb(255, 157, 0);
 }
 
 .token.attr-name {
-  color: #c76b29;
+	color: rgb(255, 180, 84);
 }
 
 .token.entity,
 .token.url,
 .language-css .token.string,
 .style .token.string {
-  color: #22a2c9;
+	color: rgb(165, 255, 144);
 }
 
 .token.attr-value,
@@ -106,67 +112,67 @@ pre[class*="language-"] {
 .token.control,
 .token.directive,
 .token.unit {
-  color: #ac9739;
+	color: rgb(255, 157, 0);
 }
 
 .token.statement,
 .token.regex,
 .token.atrule {
-  color: #22a2c9;
+	color: rgb(255, 157, 0);
 }
 
 .token.placeholder,
 .token.variable {
-  color: #3d8fd1;
+	color: rgb(255, 238, 128);
 }
 
 .token.deleted {
-  text-decoration: line-through;
+	text-decoration: line-through;
 }
 
 .token.inserted {
-  border-bottom: 1px dotted #202746;
-  text-decoration: none;
+	border-bottom: 1px dotted rgb(173, 219, 103);
+	text-decoration: none;
 }
 
 .token.italic {
-  font-style: italic;
+	font-style: italic;
 }
 
 .token.important,
 .token.bold {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .token.important {
-  color: #c94922;
+	color: rgb(179, 98, 255);
 }
 
 .token.entity {
-  cursor: help;
+	cursor: help;
 }
 
 pre > code.highlight {
-  outline: 0.4em solid #c94922;
-  outline-offset: .4em;
+	outline: 0.4em solid rgb(179, 98, 255);
+	outline-offset: 0.4em;
 }
 
 /* overrides color-values for the Line Numbers plugin
  * http://prismjs.com/plugins/line-numbers/
  */
 .line-numbers .line-numbers-rows {
-  border-right-color: #dfe2f1;
+	border-right-color: #a59aed;
 }
 
 .line-numbers-rows > span:before {
-  color: #979db4;
+	color: #a59aed;
 }
 
 /* overrides color-values for the Line Highlight plugin
  * http://prismjs.com/plugins/line-highlight/
  */
 .line-highlight {
-  background: rgba(107, 115, 148, 0.2);
-  background: -webkit-linear-gradient(left, rgba(107, 115, 148, 0.2) 70%, rgba(107, 115, 148, 0));
-  background: linear-gradient(to right, rgba(107, 115, 148, 0.2) 70%, rgba(107, 115, 148, 0));
+	background: rgba(107, 115, 148, 0.2);
+	background: -webkit-linear-gradient(left, rgba(107, 115, 148, 0.2) 70%, rgba(107, 115, 148, 0));
+	background: linear-gradient(to right, rgba(107, 115, 148, 0.2) 70%, rgba(107, 115, 148, 0));
 }
